fixed scrollbar going to far

--- a/style/contact/contactList.css
+++ b/style/contact/contactList.css
@@ -11,11 +11,12 @@
 
 .contactListInner {
   width: 100%;
-  overflow-y: scroll;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 112px;
+  overflow-y: scroll;
+  scroll-snap-align: start;
 }
 
 .customProfilePicture {
@@ -102,12 +103,12 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 96px);
 }
 
 /* Detailed Contact Section */
 .detailedContactSection {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -259,7 +260,12 @@ main {
 
 /* Media Queries */
 @media (max-width: 1400px) {
+  main {
+    height: calc(100% - 80px);
+  }
+
   .contactListInner {
-    padding-bottom: 164px;
+    height: calc(100vh - 80px);
+    margin-bottom: 80px;
   }
 }
